23 March 2020 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/app/Http/Controllers/AnnotationController.php:
 * backend/clarin/app/Http/Controllers/OpenDocumentController.php:
 * backend/clarin/app/Http/routes.php:
 * frontend/clarin/js/controllers/annotationCtrl.js:
 * frontend/clarin/js/controllers/modals/detectChangesModalCtrl.js: Fixed a
 bug in backend, in OpenDocument::destroy().

22 March 2020 Petasis George <petasis@iit.demokritos.gr>
 * backend/clarin/app/Http/Controllers/AnnotationController.php:
 * backend/clarin/app/Http/Controllers/CollectionController.php:
 * backend/clarin/app/Models/Annotation.php: Added more fields for annotations
 during Collection export (like modified, created, updated, etc.).

 * backend/clarin/app/Http/Controllers/AnnotationController.php:
 * backend/clarin/app/Http/Controllers/OpenDocumentController.php:
 * backend/clarin/app/Http/Controllers/TempAnnotationController.php:
 * backend/clarin/app/Http/routes.php:
 * backend/clarin/app/Models/Annotation.php:
 * backend/clarin/app/Models/TempAnnotation.php: Changed backend to receive
 also an "Annotator ID", which marks under what Annotator configuration each
 annotator has been created.
 
 * frontend/clarin/js/controllers/annotationCtrl.js:
 * frontend/clarin/js/controllers/modals/detectChangesModalCtrl.js:
 * frontend/clarin/js/controllers/modals/detectOpenDocModalCtrl.js:
 * frontend/clarin/js/directives/annotation-visualizer.js:
 * frontend/clarin/js/directives/annotator-widget.js:
 * frontend/clarin/js/directives/button/annotation-button.js:
 * frontend/clarin/js/directives/button/annotation-relation-annotate-btn.js:
 * frontend/clarin/js/directives/coref/coref-annotate-btn.js:
 * frontend/clarin/js/directives/text-widget.js:
 * frontend/clarin/js/directives/toolbar-widget.js:
 * frontend/clarin/js/services/annotationService.js:
 * frontend/clarin/js/services/documentService.js:
 * frontend/clarin/js/services/openDocumentService.js: